add: 获取服务详情接口
